feat(spark): dynamically query exact spark runtime version and master info from connect server
